--- a/menu.html
+++ b/menu.html
@@ -15,6 +15,7 @@
                 <li><a href="#">Nos services</a></li>
                 <li><a href="#">A propos</a></li>
                 <li><a href="#">Contact</a></li>
+                <li><a href="#">Blog</a></li>
             </ul>
             <form>
            <input type="search" name="q" placeholder="recherche">     
